tests/dataset/tpc-ds/compiler/go/q3.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq32706482361/001/main.go:287:2: syntax error: unexpected name ny after top level declaration
