tests/dataset/tpc-ds/compiler/go/q3.go
//go:build ignore

// Generated by Mochi compiler v0.10.26 on 2025-07-15T12:00:45Z

package main

import (
	"encoding/json"
	"fmt"
	"mochi/runtime/data"
	"reflect"
	"sort"
	"time"

	"golang.org/x/exp/constraints"
)

type Date_dim struct {
	D_date_sk int `json:"d_date_sk"`
	D_year    int `json:"d_year"`
	D_moy     int `json:"d_moy"`
}

type GKey struct {
	D_year   int    `json:"d_year"`
	Brand_id int    `json:"brand_id"`
	Brand    string `json:"brand"`
}

type Item struct {
	I_item_sk     int    `json:"i_item_sk"`
	I_manufact_id int    `json:"i_manufact_id"`
	I_brand_id    int    `json:"i_brand_id"`
	I_brand       string `json:"i_brand"`
}

type Result struct {
	D_year   any     `json:"d_year"`
	Brand_id any     `json:"brand_id"`
	Brand    any     `json:"brand"`
	Sum_agg  float64 `json:"sum_agg"`
}

type Store_sale struct {
	Ss_sold_date_sk    int     `json:"ss_sold_date_sk"`
	Ss_item_sk         int     `json:"ss_item_sk"`
	Ss_ext_sales_price float64 `json:"ss_ext_sales_price"`
}

type v = Result

func expect(cond bool) {
	if !cond {
		panic("expect failed")
	}
}

func formatDuration(d time.Duration) string {
	switch {
	case d < time.Microsecond:
		return fmt.Sprintf("%dns", d.Nanoseconds())
	case d < time.Millisecond:
		return fmt.Sprintf("%.1fµs", float64(d.Microseconds()))
	case d < time.Second:
		return fmt.Sprintf("%.1fms", float64(d.Milliseconds()))
	default:
		return fmt.Sprintf("%.2fs", d.Seconds())
	}
}

func printTestStart(name string) {
	fmt.Printf("   test %-30s ...", name)
}

func printTestPass(d time.Duration) {
	fmt.Printf(" ok (%s)\n", formatDuration(d))
}

func printTestFail(err error, d time.Duration) {
	fmt.Printf(" fail %v (%s)\n", err, formatDuration(d))
}

func test_TPCDS_Q3_result() {
	expect(_equal(result, []v{v{
		D_year:   1998,
		Brand_id: 2,
		Brand:    "Brand2",
		Sum_agg:  20.0,
	}, v{
		D_year:   1998,
		Brand_id: 1,
		Brand:    "Brand1",
		Sum_agg:  10.0,
	}}))
}

var date_dim []Date_dim
var store_sales []Store_sale
var item []Item
var result []Result

func main() {
	date_dim = []Date_dim{Date_dim{
		D_date_sk: 1,
		D_year:    1998,
		D_moy:     12,
	}}
	store_sales = []Store_sale{Store_sale{
		Ss_sold_date_sk:    1,
		Ss_item_sk:         1,
		Ss_ext_sales_price: 10.0,
	}, Store_sale{
		Ss_sold_date_sk:    1,
		Ss_item_sk:         2,
		Ss_ext_sales_price: 20.0,
	}}
	item = []Item{Item{
		I_item_sk:     1,
		I_manufact_id: 100,
		I_brand_id:    1,
		I_brand:       "Brand1",
	}, Item{
		I_item_sk:     2,
		I_manufact_id: 100,
		I_brand_id:    2,
		I_brand:       "Brand2",
	}}
	result = func() []Result {
		groups := map[string]*data.Group{}
		order := []string{}
		for _, dt := range date_dim {
			for _, ss := range store_sales {
				if !(dt.D_date_sk == ss.Ss_sold_date_sk) {
					continue
				}
				for _, i := range item {
					if !(ss.Ss_item_sk == i.I_item_sk) {
						continue
					}
					if (i.I_manufact_id == 100) && (dt.D_moy == 12) {
						key := GKey{
							D_year:   dt.D_year,
							Brand_id: i.I_brand_id,
							Brand:    i.I_brand,
						}
						ks := fmt.Sprint(key)
						g, ok := groups[ks]
						if !ok {
							g = &data.Group{Key: key}
							groups[ks] = g
							order = append(order, ks)
						}
						_item := map[string]any{}
						_item["d_date_sk"] = dt.D_date_sk
						_item["d_year"] = dt.D_year
						_item["d_moy"] = dt.D_moy
						_item["dt"] = dt
						_item["ss_sold_date_sk"] = ss.Ss_sold_date_sk
						_item["ss_item_sk"] = ss.Ss_item_sk
						_item["ss_ext_sales_price"] = ss.Ss_ext_sales_price
						_item["ss"] = ss
						_item["i_item_sk"] = i.I_item_sk
						_item["i_manufact_id"] = i.I_manufact_id
						_item["i_brand_id"] = i.I_brand_id
						_item["i_brand"] = i.I_brand
						_item["i"] = i
						g.Items = append(g.Items, _item)
					}
				}
			}
		}
		items := []*data.Group{}
		for _, ks := range order {
			items = append(items, groups[ks])
		}
		type pair struct {
			item *data.Group
			key  any
		}
		pairs := make([]pair, len(items))
		for idx, it := range items {
			g := it
			pairs[idx] = pair{item: it, key: _toAnySlice([]any{g.Key.(GKey).D_year, -_sum(func() []any {
				results := []any{}
				for _, x := range g.Items {
					results = append(results, x.Ss_ext_sales_price)
				}
				return results
			}()), g.Key.(GKey).Brand_id})}
		}
		sort.Slice(pairs, func(i, j int) bool {
			a, b := pairs[i].key, pairs[j].key
			switch av := a.(type) {
			case int:
				switch bv := b.(type) {
				case int:
					return av < bv
				case float64:
					return float64(av) < bv
				}
			case float64:
				switch bv := b.(type) {
				case int:
					return av < float64(bv)
				case float64:
					return av < bv
				}
			case string:
				bs, _ := b.(string)
				return av < bs
			}
			return fmt.Sprint(a) < fmt.Sprint(b)
		})
		for idx, p := range pairs {
			items[idx] = p.item
		}
		results := []Result{}
		for _, g := range items {
			results = append(results, Result{
				D_year:   g.Key.(GKey).D_year,
				Brand_id: g.Key.(GKey).Brand_id,
				Brand:    g.Key.(GKey).Brand,
				Sum_agg: _sum(func() []any {
					results := []any{}
					for _, x := range g.Items {
						results = append(results, x.Ss_ext_sales_price)
					}
					return results
				}()),
			})
		}
		return results
	}()
	func() { b, _ := json.Marshal(result); fmt.Println(string(b)) }()
	test_TPCDS_Q3_result()
}

func _equal(a, b any) bool {
	av := reflect.ValueOf(a)
	bv := reflect.ValueOf(b)
	if av.Kind() == reflect.Slice && bv.Kind() == reflect.Slice {
		if av.Len() != bv.Len() {
			return false
		}
		for i := 0; i < av.Len(); i++ {
			if !_equal(av.Index(i).Interface(), bv.Index(i).Interface()) {
				return false
			}
		}
		return true
	}
	if av.Kind() == reflect.Map && bv.Kind() == reflect.Map {
		if av.Len() != bv.Len() {
			return false
		}
		for _, k := range av.MapKeys() {
			bvVal := bv.MapIndex(k)
			if !bvVal.IsValid() {
				return false
			}
			if !_equal(av.MapIndex(k).Interface(), bvVal.Interface()) {
				return false
			}
		}
		return true
	}
	if (av.Kind() == reflect.Int || av.Kind() == reflect.Int64 || av.Kind() == reflect.Float64) &&
		(bv.Kind() == reflect.Int || bv.Kind() == reflect.Int64 || bv.Kind() == reflect.Float64) {
		return av.Convert(reflect.TypeOf(float64(0))).Float() == bv.Convert(reflect.TypeOf(float64(0))).Float()
	}
	return reflect.DeepEqual(a, b)
}

func _sum[T constraints.Integer | constraints.Float](v []T) float64 {
	var sum float64
	for _, n := range v {
		sum += float64(n)
	}
	return sum
}

func _toAnySlice[T any](s []T) []any {
	out := make([]any, len(s))
	for i, v := range s {
		out[i] = v
	}
	return out
}
